atualizações na home, about e começando desktop

--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -8,6 +8,7 @@
     text-align: left;
     display: inline-block;
     margin-top: 1rem;
+    /* margin-left: 1rem; */
 }
 
 .aboutTitleYellow {
@@ -20,8 +21,37 @@
     text-align: left;
     display: inline-block;
     margin-top: 1rem;
+    margin-left: 0.3rem;
 }
 
 .landPageAbout {
-    
+    background: rgb(18, 45, 66);
+    padding: 1.5rem;
+}
+
+.ivantyImage {
+    width: 100%;
+    height: auto;
+    margin-top: 1rem;
+}
+
+.aboutText {
+    color: rgb(255, 255, 255);
+    font-family: Roboto;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+    margin: 1rem 0px;
+
+}
+
+.aboutSubtitle {
+    color: rgb(255, 255, 255);
+    font-family: Roboto;
+    font-size: 1.125rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin: 1rem 0;
 }
