atualizando home PC

--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -13,7 +13,7 @@
 
 .aboutTitleYellow {
     color: rgb(240, 233, 104);
-    font-family: Roboto;
+    font-family: Playfair Display;
     font-size: 1.375rem;
     font-style: normal;
     font-weight: 900;
