--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -186,3 +186,73 @@ a {
         display: none;
     }
   }
+
+.carrosellPC {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    margin: 1rem;
+}
+
+.artistasEmDestaqueTextPC {
+    color: rgb(255, 255, 255);
+    font-family: Roboto;
+    font-size: 1.375rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin: 1rem;
+}
+
+.artistasEmDestaquePC {
+    background-color: rgb(18, 45, 66);
+    padding: 1rem;
+    width: 100%;
+    padding: 1rem 5rem;
+    margin-top: 1rem;
+}
+
+.categoriasEmDestaqueTextPC {
+    color: rgb(255, 255, 255);
+    font-family: Roboto;
+    font-size: 1.375rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin: 1rem;
+}
+
+.categoriasEmDestaquePC {
+    background-color: rgb(18, 45, 66);
+    padding: 1rem 5rem;
+    width: 100%;
+    margin-top: 2rem;
+}
+
+.obrasEmDestaquePC {
+    width: 100%;
+    padding: 1rem 5rem;
+    margin-top: 2rem;
+    background: rgb(18, 45, 66);
+}
+
+.obrasEmDestaqueTextPC {
+    color: rgb(255, 255, 255);
+    font-family: Roboto;
+    font-size: 1.375rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin: 1rem;
+}
+
+.obrasEmDestaqueGrid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
+.artImagePC {
+    width: 100%;
+    height: 12rem;
+    margin-top: 1rem;
+    object-fit: cover;
+}
