--- a/assets/css/artists.css
+++ b/assets/css/artists.css
@@ -44,3 +44,23 @@
     background: rgb(43, 71, 208);
     cursor: pointer;
 }
+
+.artistGridPC {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
+.artistasPC {
+    margin: .5rem 0;
+    background-color: rgb(0, 8, 46);
+    padding: 1rem 2rem;
+}
+
+.artistCardPC {
+    margin: 1rem;
+    padding: 1rem;
+    background: rgb(18, 45, 66);
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    border-radius: 1rem;
+}
